--- a/ProcessMonitorSample/ProcessMonitorConsole/ProcessMonitorConsole.csproj
+++ b/ProcessMonitorSample/ProcessMonitorConsole/ProcessMonitorConsole.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -65,12 +66,18 @@
     <Compile Include="Logger.cs" />
     <Compile Include="ProcessMonitorEventHandler.cs" />
     <Compile Include="ProcessMonitoring\EventBasedProcessMonitor.cs" />
+    <Compile Include="ProcessMonitoring\EventBasedProcessMonitorWin32.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ProcessMonitoring\ForegroundProcessChangedEventArgs.cs" />
     <Compile Include="ProcessMonitoring\ProcessListChangedEventArgs.cs" />
     <Compile Include="ProcessMonitoring\PollingProcessMonitor.cs" />
     <Compile Include="ProcessMonitoring\ProcessProxy.cs" />
-    <Compile Include="ProcessMonitoring\ProcessStateChangeEventArgs.cs" />
+    <Compile Include="ProcessMonitoring\ProcessStateChangedEventArgs.cs" />
     <Compile Include="ProcessMonitoring\ProcessUtils.cs" />
+    <Compile Include="ProcessMonitoring\Win32Process.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
