--- a/ProcessMonitorSample/ProcessMonitorConsole/ProcessMonitorConsole.csproj
+++ b/ProcessMonitorSample/ProcessMonitorConsole/ProcessMonitorConsole.csproj
@@ -60,25 +60,29 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedCode\ProcessMonitoring\ForegroundProcessChangedEventArgs.cs">
+      <Link>ProcessMonitoring\ForegroundProcessChangedEventArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\SharedCode\ProcessMonitoring\PollingProcessMonitor.cs">
+      <Link>ProcessMonitoring\PollingProcessMonitor.cs</Link>
+    </Compile>
+    <Compile Include="..\SharedCode\ProcessMonitoring\ProcessListChangedEventArgs.cs">
+      <Link>ProcessMonitoring\ProcessListChangedEventArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\SharedCode\ProcessMonitoring\ProcessProxy.cs">
+      <Link>ProcessMonitoring\ProcessProxy.cs</Link>
+    </Compile>
+    <Compile Include="..\SharedCode\ProcessMonitoring\ProcessStateChangedEventArgs.cs">
+      <Link>ProcessMonitoring\ProcessStateChangedEventArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\SharedCode\ProcessMonitoring\ProcessUtils.cs">
+      <Link>ProcessMonitoring\ProcessUtils.cs</Link>
+    </Compile>
     <Compile Include="AppServiceConnectionManager.cs" />
     <Compile Include="AppServiceConnectionRequestHandler.cs" />
     <Compile Include="CommunicationProtocol\Keys.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="ProcessMonitorEventHandler.cs" />
-    <Compile Include="ProcessMonitoring\EventBasedProcessMonitor.cs" />
-    <Compile Include="ProcessMonitoring\EventBasedProcessMonitorWin32.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="ProcessMonitoring\ForegroundProcessChangedEventArgs.cs" />
-    <Compile Include="ProcessMonitoring\ProcessListChangedEventArgs.cs" />
-    <Compile Include="ProcessMonitoring\PollingProcessMonitor.cs" />
-    <Compile Include="ProcessMonitoring\ProcessManager.cs" />
-    <Compile Include="ProcessMonitoring\ProcessProxy.cs" />
-    <Compile Include="ProcessMonitoring\ProcessStateChangedEventArgs.cs" />
-    <Compile Include="ProcessMonitoring\ProcessUtils.cs" />
-    <Compile Include="ProcessMonitoring\Win32Process.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
